# insights-core

./: .Dockerfile.content-server  .collections.py  .coveragerc  .flake8  .gitignore  .gitleaks.toml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FavaREADME.md  FavaReference.md  Insights Core Tutorial.ipynb  Jenkinsfile  MANIFEST.in  MANIFEST.in.client  MANIFEST.in.client.egg  MANIFEST.in.client.rpm  MANIFEST.in.core  NEW_REMOVE_CONF_POC.yaml  NOTICE  README.md  README.rst  Rule Migration Guide.ipynb  build.sh  build_client_egg.sh  build_collector_rpm.sh  build_core_rpm.sh  collect.py  conftest.py  falafel-web.cfg.example  falafel.cfg  hextest.py  hydrate.py  insights-completion.bash  insights-core.spec  installed_rpms_rule.py  (+28 more)
.codeboarding/: Client Application & Orchestration.md  Data Collection & Processing Engine.md  Data Management & Utilities.md  External Dependencies.md  Reporting & Output.md  on_boarding.md
.github/: pull_request_template.md  workflows
.github/workflows/: build_egg.yml  main.yml  specs_cross_check.yml
.tekton/: insights-core-pull-request.yaml  insights-core-push.yaml
.tito/: tito.props
cluster_rules/: bash_version.py  ntp_compare.py
docs/: Makefile  api.rst  api_index.rst  cheatsheets_index.rst  combiner_tutorial.rst  combiners_index.rst  component_config.rst  components.rst  components_index.rst  conf.py  custom_datasources_index.rst  custom_tutorial_index.rst  customtut_parsers.rst  customtut_rule.rst  docs_guidelines.rst  embedded_content.rst  exception_model.rst  fava.rst  index.rst  insights.rst  intro.rst  manpages_index.rst  mappers_index.rst  notebook_index.rst  ocp.rst  parser_tutorial.rst  parsers_index.rst  quickstart_insights_core.rst  reducers_index.rst  requirements.txt  rule_tutorial_index.rst  ruletut_env.rst  ruletut_exp_1.rst  ruletut_exp_2.rst  ruletut_mappers.rst  ruletut_parsers.rst  ruletut_reducer.rst  ruletut_rule.rst  ruletut_run_tests.rst  ruletut_tests.rst  (+4 more)
docs/examples/: README.rst
docs/manpages/: config.rst  insights-cat.rst  insights-info.rst  insights-inspect.rst  insights-run.rst  inventory.rst
docs/notebooks/: Config Tree Tutorial.ipynb  Datasource Registry.ipynb  Development Examples.ipynb  Diagnostic Walkthrough.ipynb  Filters Tutorial.ipynb  Insights Core Tutorial.ipynb  Parsr Query Tutorial.ipynb  Rule Migration Guide.ipynb  death_star.ini
docs/shared_combiners_catalog/: ansible_info.rst  ceph_osd_tree.rst  ceph_version.rst  cloud_instance.rst  cloud_provider.rst  cpu_vulns_all.rst  cpu_vulns_branch.rst  crio_conf.rst  cryptsetup.rst  dmesg.rst  dnf_module_info.rst  du.rst  fwupdagent.rst  grub_conf.rst  grubby.rst  hostname.rst  httpd_V.rst  httpd_conf.rst  identity_domain.rst  ipa.rst  ipcs_semaphores.rst  ipcs_shared_memory.rst  ipv6.rst  jboss_domain_conf.rst  journald_conf.rst  krb5.rst  limits_conf.rst  logrotate_conf.rst  lspci.rst  lvm.rst  md5check.rst  mlx4_port.rst  modinfo.rst  modprobe.rst  mounts.rst  netstat.rst  nfs_exports.rst  nginx_conf.rst  nmcli.rst  nmcli_dev_show.rst  (+27 more)
docs/shared_components_catalog/: ceph.rst  cloud_provider.rst  cryptsetup.rst  insights_core.rst  openstack.rst  rhel.rst  rhel_version.rst  satellite.rst  satellite_version.rst  selinux.rst  virtualization.rst
docs/shared_mappers_catalog/: auditd_conf.rst  autofs_conf.rst  blkid.rst  bond.rst  brctl_show.rst  catalina_out.rst  cciss.rst  ceilometer_conf.rst  ceilometer_log.rst  ceph_cmd_json_parsing.rst  ceph_osd_log.rst  ceph_version.rst  certificates_enddate.rst  chkconfig.rst  cib.rst  cinder_conf.rst  cmdline.rst  cobbler_modules_conf.rst  cobbler_settings.rst  config.rst  corosync.rst  cpuinfo.rst  cpuinfo_max_freq.rst  crontab.rst  current_clocksource.rst  date.rst  dcbtool_gc_dcb.rst  df.rst  dirsrv_sysconfig.rst  display_java.rst  dmesg.rst  dmidecode.rst  docker_host_machine_id.rst  docker_inspect.rst  docker_list.rst  docker_storage_setup.rst  docker_sysconfig.rst  dockerinfo.rst  dumpe2fs_h.rst  engine_log.rst  (+93 more)
docs/shared_parsers_catalog/: abrt_ccpp.rst  abrt_status_bare.rst  alibaba_instance_type.rst  alternatives.rst  amq.rst  ansible.rst  ansible_hosts.rst  ansible_tower_config_custom.rst  ansible_tower_settings.rst  audit_log.rst  auditctl.rst  auditctl_status.rst  auditd_conf.rst  authselect.rst  autofs_conf.rst  avc_cache_threshold.rst  avc_hash_stats.rst  aws_instance_id.rst  aws_instance_type.rst  awx_manage.rst  awx_manage_print_settings.rst  azure_instance.rst  azure_instance_plan.rst  azure_instance_type.rst  bdi_read_ahead_kb.rst  blacklisted.rst  blkid.rst  bond.rst  bond_dynamic_lb.rst  bootc.rst  brctl_show.rst  buddyinfo.rst  candlepin_broker.rst  catalina_log.rst  catalina_out.rst  catalina_server_log.rst  cciss.rst  ceilometer_conf.rst  ceilometer_log.rst  ceph_cmd_json_parsing.rst  (+578 more)
docs/shared_reducers_catalog/: grub_conf.rst  hostname.rst  httpd_conf.rst  ipcs_semaphores.rst  ipv6.rst  journald_conf.rst  lvm.rst  redhat_release.rst  satellite_version.rst  selinux.rst  services.rst  uptime.rst  user_namespaces.rst
docs/src/: insights_overview_image.odg
examples/: README.md
examples/cluster_rules/: README.md  allnodes_cpu.py  bash_version.py  ntp_compare.py  topology_allnodes  topology_example
examples/collection/: manifest.yaml
examples/rules/: README.md  bash_version.py  hostname_rel.py  sample_script.py  skip_component.py  stand_alone.py
falafel/: NAME  __init__.py  content.py  defaults.yaml  settings.py
falafel/archive/: __init__.py  (+4 more)
insights/: NAME  VERSION  __init__.py  __main__.py  collect.py  command_parser.py  compliance_obfuscations.yaml  defaults.yaml  ocp.py  ocpshell.py  password_obfuscation.sed  revoked_playbooks.yaml  rpm_stuff.py  scaffold.py  settings.py  shell.py  specs.py  specs_default.py  specs_insights_archive.py  specs_prod.py  uploader.json  uploader_json_map.json  version.py
notebooks/: Datasource Registry.ipynb  Development Examples.ipynb  Insights Core Tutorial.ipynb  Rule Migration Guide.ipynb
tools/: bodytemplate.md  compare_uploader_configs.py  generate_api_config.py
(+3682 files in other folders)
