[tool:pytest]
# Look for tests only in tests directories.
python_files = "insights/tests/*" "insights/parsers/tests/*" "insights/combiners/tests/*" "insights/parsr/tests/*" "insights/parsr/examples/tests/*" "insights/parsr/query/tests/*" "insights/archive/test.py" "insights/components/tests/*" "insights/parsr/tests/*"
# Display summary info for (s)skipped, (X)xpassed, (x)xfailed, (f)failed and (e)errored tests
# On Jenkins pytest for some reason runs tests from ./build/ directory - ignore them.
addopts = "-rsxXfE --ignore=./build/"
testpaths = "insights"

[metadata]
license_file = LICENSE
