[tool:pytest]
markers =
    syslog_format: marks tests for syslog format (deselect with '-m "not syslog_format"')
# Look for tests only in tests directories.
python_files = "insights/tests/*" "insights/parsr/tests/*" "insights/parsr/examples/tests/*" "insights/parsr/query/tests/*" "insights/archive/test.py"
# Display summary info for (s)skipped, (X)xpassed, (x)xfailed, (f)failed and (e)errored tests
# On Jenkins pytest for some reason runs tests from ./build/ directory - ignore them.
addopts = "-rsxXfE --ignore=./build/"
testpaths = "insights"

[metadata]
license_files = LICENSE
